// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cli command "daily" should display a graph 1`] = `
"
Date        Valeur (Wh) Graphique                     
2023-04-01  11776       ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■"
`;

exports[`cli command "dailyprod" should display a graph 1`] = `
"
Date        Valeur (Wh) Graphique                     
2023-04-01  643         ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■"
`;

exports[`cli command "loadcurve" should display a graph 1`] = `
"
Date                 Valeur (W) Graphique                     
2023-04-01 00:30:00  752        ■■■■■■■■
2023-04-01 01:00:00  346        ■■■■
2023-04-01 01:30:00  250        ■■■
2023-04-01 02:00:00  154        ■■
2023-04-01 02:30:00  126        ■■
2023-04-01 03:00:00  110        ■■
2023-04-01 03:30:00  140        ■■
2023-04-01 04:00:00  236        ■■■
2023-04-01 04:30:00  138        ■■
2023-04-01 05:00:00  104        ■
2023-04-01 05:30:00  128        ■■
2023-04-01 06:00:00  234        ■■■
2023-04-01 06:30:00  124        ■■
2023-04-01 07:00:00  104        ■
2023-04-01 07:30:00  360        ■■■■
2023-04-01 08:00:00  124        ■■
2023-04-01 08:30:00  122        ■■
2023-04-01 09:00:00  108        ■■
2023-04-01 09:30:00  120        ■■
2023-04-01 10:00:00  106        ■■
2023-04-01 10:30:00  250        ■■■
2023-04-01 11:00:00  108        ■■
2023-04-01 11:30:00  230        ■■■
2023-04-01 12:00:00  1594       ■■■■■■■■■■■■■■■■
2023-04-01 12:30:00  3150       ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■
2023-04-01 13:00:00  750        ■■■■■■■■
2023-04-01 13:30:00  1178       ■■■■■■■■■■■■
2023-04-01 14:00:00  566        ■■■■■■
2023-04-01 14:30:00  206        ■■
2023-04-01 15:00:00  440        ■■■■■
2023-04-01 15:30:00  1510       ■■■■■■■■■■■■■■■
2023-04-01 16:00:00  1004       ■■■■■■■■■■
2023-04-01 16:30:00  666        ■■■■■■■
2023-04-01 17:00:00  446        ■■■■■
2023-04-01 17:30:00  276        ■■■
2023-04-01 18:00:00  510        ■■■■■
2023-04-01 18:30:00  588        ■■■■■■
2023-04-01 19:00:00  404        ■■■■
2023-04-01 19:30:00  286        ■■■
2023-04-01 20:00:00  2256       ■■■■■■■■■■■■■■■■■■■■■■
2023-04-01 20:30:00  1620       ■■■■■■■■■■■■■■■■
2023-04-01 21:00:00  684        ■■■■■■■
2023-04-01 21:30:00  312        ■■■
2023-04-01 22:00:00  166        ■■
2023-04-01 22:30:00  148        ■■
2023-04-01 23:00:00  86         ■
2023-04-01 23:30:00  144        ■■
2023-04-02 00:00:00  88         ■"
`;

exports[`cli command "loadcurveprod" should display a graph 1`] = `
"
Date                 Valeur (W) Graphique                     
2023-04-01 00:30:00  0          
2023-04-01 01:00:00  0          
2023-04-01 01:30:00  0          
2023-04-01 02:00:00  0          
2023-04-01 02:30:00  0          
2023-04-01 03:00:00  0          
2023-04-01 03:30:00  0          
2023-04-01 04:00:00  0          
2023-04-01 04:30:00  0          
2023-04-01 05:00:00  0          
2023-04-01 05:30:00  0          
2023-04-01 06:00:00  0          
2023-04-01 06:30:00  0          
2023-04-01 07:00:00  0          
2023-04-01 07:30:00  0          
2023-04-01 08:00:00  0          
2023-04-01 08:30:00  0          
2023-04-01 09:00:00  0          
2023-04-01 09:30:00  0          
2023-04-01 10:00:00  0          
2023-04-01 10:30:00  0          
2023-04-01 11:00:00  132        ■■■■■■■■■■■
2023-04-01 11:30:00  112        ■■■■■■■■■■
2023-04-01 12:00:00  368        ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■
2023-04-01 12:30:00  288        ■■■■■■■■■■■■■■■■■■■■■■■■
2023-04-01 13:00:00  16         ■■
2023-04-01 13:30:00  122        ■■■■■■■■■■
2023-04-01 14:00:00  102        ■■■■■■■■■
2023-04-01 14:30:00  26         ■■■
2023-04-01 15:00:00  24         ■■
2023-04-01 15:30:00  0          
2023-04-01 16:00:00  0          
2023-04-01 16:30:00  76         ■■■■■■■
2023-04-01 17:00:00  16         ■■
2023-04-01 17:30:00  0          
2023-04-01 18:00:00  0          
2023-04-01 18:30:00  4          ■
2023-04-01 19:00:00  0          
2023-04-01 19:30:00  0          
2023-04-01 20:00:00  0          
2023-04-01 20:30:00  0          
2023-04-01 21:00:00  0          
2023-04-01 21:30:00  0          
2023-04-01 22:00:00  0          
2023-04-01 22:30:00  0          
2023-04-01 23:00:00  0          
2023-04-01 23:30:00  0          
2023-04-02 00:00:00  0          "
`;

exports[`cli command "maxpower" should display a graph 1`] = `
"
Date                 Valeur (VA) Graphique                     
2023-04-01 12:06:20  4638        ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■"
`;

exports[`cli daily command should create directory and write to file when output flag is used  1`] = `
"{
  "usage_point_id": "11111111111111",
  "start": "2023-04-01",
  "end": "2023-04-02",
  "quality": "BRUT",
  "reading_type": {
    "unit": "Wh",
    "measurement_kind": "energy",
    "aggregate": "sum",
    "measuring_period": "P1D"
  },
  "interval_reading": [
    {
      "value": "11776",
      "date": "2023-04-01"
    }
  ]
}"
`;

exports[`cli daily command should output CSV with 2 columns when --format=csv 1`] = `
"
Date,Valeur (Wh)
2023-04-01,11776"
`;

exports[`cli daily command should output JSON when --format=json 1`] = `
"
{
  "usage_point_id": "11111111111111",
  "start": "2023-04-01",
  "end": "2023-04-02",
  "quality": "BRUT",
  "reading_type": {
    "unit": "Wh",
    "measurement_kind": "energy",
    "aggregate": "sum",
    "measuring_period": "P1D"
  },
  "interval_reading": [
    {
      "value": "11776",
      "date": "2023-04-01"
    }
  ]
}"
`;
